update: names & server

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header  -->
     <header>
         <nav class="header">
-            <img src="./img/corazones-alura.png" alt="corazones alura">
+            <img src="img/coracaoalura.png" alt="corazones alura">
             <h1>AluraGeek</h1>
         </nav>
     </header>
@@ -52,7 +52,7 @@
     </main>
     <footer>
         <div class="footer">
-            <img src="./img/corazones-alura.png" alt="corazones alura">
+            <img src="img/coracaoalura.png" alt="corazones alura">
             <h2>AluraGeek</h2>
         </div>
         <p>Desarrollado por Ale Cueto</p>
