update: add-product

--- a/index.html
+++ b/index.html
@@ -35,17 +35,16 @@
         <h2>Adicionar produto:</h2>
         <div id="formContent">
             <form action="">
-                <input id="nameProductForm" type="text" placeholder="Nome..." maxlength="50" >
-                <input id="priceProductForm" type="number" placeholder="Preço..." >
-                <input id="imgProductForm" type="text" placeholder="Imagem...">
+                <input id="nameProductForm" type="text" placeholder="Nome..." maxlength="50">
+                <input id="priceProductForm" type="number" placeholder="Preço...">
+                <input id="imgProductForm" type="text" placeholder="URL da Imagem (opcional)">
+                <input id="imgUploadForm" type="file" accept="image/*">
                 <div class="btn-form">
                     <button id="btnSend">Enviar</button>
                     <button id="btnClean">Limpar</button>
                 </div>
-
             </form>
         </div>
-
     </section>
 
 </main>
